--- a/index.html
+++ b/index.html
@@ -1543,9 +1543,6 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </div>
 
 <div class="d-article">
-<h2 id="project-thoughts">Project thoughts</h2>
-<p>I am interested in exploring data related to…</p>
-<p>I am interested looking at election outcomes/polling data to see if predictions based on polling data before elections translates to the outcome. I would also be interested in looking into campaign finance similar to problem set 2. I thought it was interesting looking at which candidates spent the most on advertising.</p>
 <h2 id="introduction">Introduction</h2>
 <p>My research question is did the mode of voting, whether it be in-person voting directly at the polls or a mail in ballot have an effect on the votes given to the Democratic Party and its candidates in the 2020 Presidential election?</p>
 <p>I hypothesize that a greater amount of absentee votes (mail in votes) are received by the Democratic Party. I hypothesize this due to behavioral patterns that I observed during the 2020 elections and the COVID-19 pandemic. I observed that many Democrats voted via mail-in ballot to avoid the potential of spreading COVID-19. Republicans seemed more comfortable going to the polls in person, and debated the legitimacy of mail-in ballots. These behavioral observations lead me to hypothesize that more absentee votes are Democrat votes.</p>
@@ -1592,7 +1589,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 {
     UseMethod(&quot;ggplot&quot;)
 }
-&lt;bytecode: 0x7fc7a0d817f8&gt;
+&lt;bytecode: 0x7faf0b0a5008&gt;
 &lt;environment: namespace:ggplot2&gt;</code></pre>
 </div>
 <h2 id="results-section">Results Section</h2>
