--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>I hypothesize that a greater amount of absentee votes (mail in votes) are received by the Democratic Party. I hypothesize this due to behavioral patterns that I observed during the 2020 elections and the COVID-19 pandemic. I observed that many Democrats voted via mail-in ballot to avoid the potential of spreading COVID-19. Republicans seemed more comfortable going to the polls in person, and debated the legitimacy of mail-in ballots. These behavioral observations lead me to hypothesize that more absentee votes are Democrat votes.</p>
 <p>This is interesting because the 2020 election was very unique in that it took place during a global pandemic and an unprecedented time. Understanding voting patterns and how they correlated with one party over another could lead to further research on if democrat votes were mail-in due to the state of the nation during the pandemic, or if this is a common pattern that is seen in each election cycle.</p>
 <h2 id="data-section">Data Section</h2>
-<p>I will be using the dataset “U.S. President Precinct-Level Returns 2020” from Harvard Dataverse to examine if certain modes of voting, such as absentee and mail in or in-person on Election Day, correlates to the candidate/party that received the votes. The key dependent and independent variables are measured through survey data, clinical data, and machine-readable text.</p>
+<p>I will be using the dataset “U.S. President Precinct-Level Returns 2020” from Harvard Dataverse to examine if certain modes of voting, such as absentee and mail in or in-person on Election Day, correlates to the candidate/party that received the votes. The key dependent and independent variables are measured through survey data, clinical data, and machine-readable text. The data is cross-sectional, as the data was collected from the individuals at the same time.</p>
 <p>The explanatory variable of interest will be the form or mode of voting. This is measured by the category present in the data which is either absentee or normal/in-person. This has been pre-recorded. The outcome variable will be which party was voted for. It will either be a democratic or republican candidate, with some writing in and voting for a third party. I will be looking at the share of votes received by the democrats that are mail-ins/absentee. If a large majority of absentee votes were received by the Democrats, this could provide support for my hypothesis. If it does not seem that most of the mail-in votes were received by Democrats, meaning more Republicans or third-party voters were mail-ins, then my hypothesis will be false.</p>
 <p>The bar plot pictured below compares the absentee votes versus non-absentee votes (voters who placed their vote in person, at the polls, on election day). On the left is the absentee votes separated by party. The democrat votes are slightly higher than the republican votes for absentee, with the democrat votes just above 35,000 votes and the republican votes just below 35,000. On the right is the non-absentee or in person votes, also separated by party. In this case, the in person votes are just about equal.</p>
 <div class="layout-chunk" data-layout="l-body">
@@ -1589,7 +1589,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 {
     UseMethod(&quot;ggplot&quot;)
 }
-&lt;bytecode: 0x7fdc2dd8b3f8&gt;
+&lt;bytecode: 0x7fa3a923b238&gt;
 &lt;environment: namespace:ggplot2&gt;</code></pre>
 </div>
 <h2 id="results-section">Results Section</h2>
